--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,9 @@
 header {
   background-color: #fff14b;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 0 5px rgb(211, 211, 211);
 }
 
 header a {
@@ -24,4 +28,14 @@ header li a {
 
 header li a:hover {
   text-decoration: underline;
+}
+
+header .input__busqueda {
+  width: 20rem;
+}
+
+@media only screen and (max-width: 500px) {
+  header .input__busqueda {
+    width: 12rem;
+  }
 }
